<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DatabaseDemoApp</string>
    <string name="action_settings">Settings</string>

    <!-- string constants -->
    <string name="etName">Name</string>
    <string name="etContact">Contact</string>
    <string name="btnInsert">Insert</string>
    <string name="btnUpdate">Update</string>
    <string name="btnDelete">Delete</string>
    <string name="btnSelect">Select</string>

</resources>